--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </li>
     </ul>
     <script src="js/app.js"></script>
-    <script src="DragDropTouch.js"></script>
+    <script src="js/DragDropTouch.js"></script>
 </body>
 
 </html>
